--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,5 +76,6 @@
         ]
     },
     "editor.suggest.snippetsPreventQuickSuggestions": false,
-    "git.ignoreLimitWarning": true
+    "git.ignoreLimitWarning": true,
+    "java.configuration.updateBuildConfiguration": "automatic"
 }
