--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   url_launcher: ^6.3.0
   typing_text: ^1.0.4
   responsive_sizer: ^3.3.1
+  flutter_animate: ^4.5.0
 
 dev_dependencies:
   flutter_lints: ^4.0.0
