--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   typing_text: ^1.0.4
   responsive_sizer: ^3.3.1
   flutter_animate: ^4.5.0
+  auto_animated: ^3.2.0
 
 dev_dependencies:
   flutter_lints: ^4.0.0
